Fix jump dropdown_info

--- a/css/main.css
+++ b/css/main.css
@@ -279,29 +279,26 @@ main {
 
 .dropdown_info {
 
+	visibility: visible;
 	border: .1em solid #000;
 	border-radius: 1.5em;
 	list-style-type: none;
+	overflow: hidden;
 	position: absolute;
 	margin: 0;
 	padding: 0;
 	left: 0;
-	opacity: 0;
+	opacity: 1;
 	text-align: center;
 	background: #fff;
-	opacity: 1;
-	visibility: visible;
 	top: 100%;
 	width: 100%;
-	-webkit-transition: all .2s, background, 0.3s .1s linear;
-	transition: all .2s, background 0.3s .1s linear;
 	z-index: 1;
 }
 
 .dropdown_info p {color: #000;}
 .dropdown_info li:first-child {cursor: default;}
-
-.dropdown_info {display: none};
+.dropdown_info {display: none;};
 
 /*** END ***/
 
